--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,7 @@
+<%= render "sessions/errors", user: @user %>
+
+<%= flash[:notice] unless flash[:notice].nil? %>
+
 <h1>Sign Up</h1>
 <form action="<%= users_url %>" method="post">
   <%= auth_token %>
