--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -15,6 +15,6 @@
   <%= @post.content %>
 </textarea>
 
-<input type="hidden" name="sub_id" value="<%= @post.sub.id %>">
+<!-- <input type="hidden" name="sub_id" value="<%= @post.sub.id %>"> -->
 <!-- sends sub_id of the instance variable to create action in PostsController -->
 <%= submit_button %>
