--- a/app/views/subs/show.html.erb
+++ b/app/views/subs/show.html.erb
@@ -2,7 +2,7 @@
 <h2><%= @sub.description %></h2>
 
 <form action="<%=new_post_url%>" method="get">
-  <input type="hidden" name="sub_id" value="<%=@sub.id%>">
+  <!-- <input type="hidden" name="sub_id" value="<%=@sub.id%>"> Removed for x-posting functionality-->
   <!--  hidden input sends @sub.id to params hash to be used in PostsController-->
   <button>Add new post</button>
 </form>
@@ -19,3 +19,12 @@
     <button> Delete Sub </button>
   </form>
 <% end %>
+
+<h2> Posts </h2>
+<table>
+<% @sub.posts.each do |post| %>
+  <tr><td> <a href=" <%= post_url(post) %>"> <%= post.title %></a></td></tr>
+
+  <tr><td><em> Posted <%= time_ago_in_words(post.created_at) %> ago </em></td></tr>
+  <% end %>
+</table>
