--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,20 +1,31 @@
 <%= auth_token %>
 
-<label for="post_title">Title of post</label><br>
-<input type="text" name="post[title]" value="<%= @post.title %>">
+<label for="post_title">Title of post<br>
+<input type="text" name="post[title]" value="<%= @post.title %>"></label>
 
 <br><br>
 
-<label for="post_url">URL</label><br>
-<input type="text" name="post[url]" value="<%= @post.url %>">
+<label for="post_url">URL<br>
+<input type="text" name="post[url]" value="<%= @post.url %>"></label>
 
 <br><br>
 
-<label for="post_content">Content</label><br>
+<label for="post_content">Content<br>
 <textarea name="post[content]" rows="8" cols="40">
   <%= @post.content %>
-</textarea>
+</textarea></label>
 
-<!-- <input type="hidden" name="sub_id" value="<%= @post.sub.id %>"> -->
-<!-- sends sub_id of the instance variable to create action in PostsController -->
+<br><br>
+
+<label for="post_sub_ids">Subs<br>
+  <% @subs.each do |sub| %>
+<input type="checkbox" name="post[sub_ids][]"
+       value="<%= sub.id %>" <%= "checked" if @post.sub_ids.include?(sub.id) %>>
+       <%= sub.title %>
+       <br>
+  <% end %>
+</label>
+
+<br><br>
+
 <%= submit_button %>
