Added better nested comments method with Post#comments_by_parent_id

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,8 +23,7 @@
   <%= submit_button %>
 </form>
 
-<% @comments.each do |comment| %>
-  <% next unless comment.parent_id.nil? %>
+<% @comments[nil].each do |comment| %>
   <%= render "comments/comment", comment: comment %>
 <% end %>
 <a href="<%= subs_url %>">Back To Subs</a>
