--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,12 +1,10 @@
 <%= comment.content %><br>
 <a href="<%= comment_url(comment) %>">View</a>
 <em><%= time_ago_in_words(comment.created_at) %> ago</em><br><br>
-<% if @comments.any? { |child| child.parent_id == comment.id } %>
+<% if @comments[comment.id].any? %>
   <ul>
-    <% @comments.each do |child| %>
-      <% if child.parent_id == comment.id %>
+    <% @comments[comment.id].each do |child| %>
         <li><%= render "comments/comment", comment: child %></li>
-      <% end %>
     <% end %>
   </ul>
 <% end %>
