--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,17 @@
 </head>
 <body>
 
+<% if logged_in? %>
+  <%= current_user.username %>
+  <form action="<%=session_url%>" method="post">
+    <%= auth_token %>
+    <input type="hidden" name="_method" value="delete">
+    <button>Log Out</button>
+  </form>
+<% end %>
+
+<%= flash[:error].join("<br>") if flash[:error] %>
+
 <%= yield %>
 
 </body>
