--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,3 @@
 <h1>Bonjour Le Sign Up Page</h1>
 
-<form action="<%= users_url %>" method="post">
-    <%= auth_token %>
-  </form>
-</form>
+<%= render "form", action: users_url, button_text: "Sign Up" %>
