--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,15 +1,10 @@
 <h1>Search!</h1>
 
-<form action="/users/search" method="GET">
-  <input
-    type="text"
-    name="query"
-    value="<%= @query %>">
+<section class="users-search">
+  <input id="users-query" type="text" name="users[query]" value="">
 
-  <input type="submit" value="Search Users!">
-</form>
 
-<ul>
+<ul class="users">
   <% @users.each do |user| %>
     <li>
       <%= link_to user.username, user_url(user) %>
@@ -17,3 +12,50 @@
     </li>
   <% end %>
 </ul>
+</section>
+
+<script charset="utf-8">
+  $.UsersSearch = function (el) {
+    this.$el = $(el);
+    this.$input = $(this.$el.find('#users-query'));
+    this.$usersList = $(this.$el.find('ul.users'));
+    this.$input.keydown( this.handleInput.bind(this) );
+  };
+
+  $.UsersSearch.prototype.handleInput = function(event){
+    $.ajax({
+      url: "<%= search_users_url %>",
+      type: "get",
+      dataType: "json",
+      data: { "query": this.$input.val() },
+      success: this.renderResults.bind(this)
+    })
+  };
+
+  $.UsersSearch.prototype.renderResults = function(results) {
+    this.$usersList.html("");
+    var template = _.template("<li><a href='<%%= userUrl %>'><%%= userUsername%></a><button id='<%%= userId %>'></button></li>");
+
+    results.forEach(function(user){
+      var li = template({userUrl: "/users/" + user.id,
+                         userUsername: user.username,
+                         userId: user.id});
+      this.$usersList.append(li);
+      var followState = user.followed ? "followed" : "unfollowed";
+
+      $("#" + user.id).followToggle({"userId": user.id, "followState": followState});
+    }.bind(this));
+
+  };
+
+  $.fn.usersSearch = function () {
+    return this.each(function () {
+      new $.UsersSearch(this);
+    });
+  };
+
+  $(function () {
+    $(".users-search").usersSearch();
+  });
+
+</script>
