--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,71 +24,8 @@
 </ul>
 
 <script charset="utf-8">
-  $.FollowToggle = function (el) {
-    this.$el = $(el);
-    this.userId = this.$el.data("user-id");
-    this.followState = this.$el.data("initial-follow-state");
-    this.render();
-    this.$el.on("click", this.handleClick.bind(this));
-  };
-
-  $.FollowToggle.prototype.render = function () {
-    var buttonText = this.followState === "followed" ? "unfollow!" : "follow!";
-    this.$el.text(buttonText);
-  };
-
-  $.FollowToggle.prototype.handleClick = function(event){
-    event.preventDefault();
-
-    var actionType, newState;
-    if (this.followState === "followed"){
-      actionType = "delete";
-      newState = "unfollowed";
-    } else {
-      actionType = "post";
-      newState = "followed";
-    }
-
-    $.ajax({
-      url: "<%= user_follow_url(@user) %>",
-      type: actionType,
-      dataType: "JSON",
-      success: function () {
-        this.$el.prop("disabled", false)
-        this.toggleFollower();
-        }.bind(this)
-    })
-
-    this.toggleState(newState);
-    this.render();
-    this.$el.prop("disabled", true)
-  };
-
-  $.FollowToggle.prototype.toggleState = function(state){
-    this.$el.data("initial-follow-state", state);
-    this.followState= state;
-  }
-
-  $.FollowToggle.prototype.toggleFollower = function(){
-    if (this.followState === "unfollowed"){
-      $('#user-followers > li').each(function(idx, child){
-        if ($(child).text() === "<%= current_user.username %>") {
-          $(child).remove();
-        }
-      })
-    } else {
-      $('#user-followers').append("<li><%= current_user.username %></li>");
-    }
-
-  }
-
-  $.fn.followToggle = function () {
-    return this.each(function () {
-      new $.FollowToggle(this);
-    });
-  };
 
   $(function () {
-    $("button.follow-toggle").followToggle();
+    $("button.follow-toggle").followToggle({"follower": "<%=current_user.username %>"});
   });
 </script>
