--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -14,9 +14,12 @@
     this.$el = $(el);
     this.$inputs = this.$el.find(':input');
     this.$charsLeft = this.$el.find('.chars-left');
+    this.$addMentions = this.$el.find(".add-mentioned-user");
+
     this.$el.on('submit', this.submit.bind(this));
-    this.$el.find('textarea').keydown(this.countChars.bind(this))
-  }
+    this.$el.find('textarea').keydown(this.countChars.bind(this));
+    this.$addMentions.on('click', this.addMentionedUser.bind(this));
+      }
 
   $.TweetCompose.prototype.submit = function(event){
     event.preventDefault();
@@ -32,37 +35,50 @@
     })
   }
 
+
+
+  $.TweetCompose.prototype.addMentionedUser = function(event){
+    var html = this.$el.find('script').html();
+    this.$el.find('.mentioned-users').append(html);
+    this.$el.find('a.remove-mentioned-user').on('click', this.removeMentionedUser.bind(this))
+  }
+
+  $.TweetCompose.prototype.removeMentionedUser = function(event){
+    console.log("hi nick");
+    $(event.currentTarget).parent().remove();
+  }
+
   $.TweetCompose.prototype.countChars = function(event){
     var tweetLength = $(event.currentTarget).val().length;
     this.$charsLeft.text(140 - tweetLength);
   }
 
   $.TweetCompose.prototype.clearInput = function(){
-    // this.$inputs.val("");
+    this.$el.find('a.remove-mentioned-user').parent().remove();
     this.$el.find(':input:not(:last)').val("");
     this.$charsLeft.text("140");
     this.$inputs.prop('disabled', false);
   }
 
   $.TweetCompose.prototype.handleSuccess = function(data){
-
-    console.log(data);
     this.clearInput();
     var $ul = $(this.$el.data('tweets-ul'));
     var template = _.template("<li><%%= tweetContent %>\n" +
-                              "-- <a href='<%%= tweetUserShow %>'><%%= tweetUser %></a>"+
-                              "\n-- <%%= tweetCreatedAt %>")
-
-                              // <%% if (tweetMention){ %>
-                              //   <ul>
-                              //   <li><a href='<%%= tweetMentionShow %>'><%%= tweetMention %></a></li>
-                              //   </ul></li>
+                              "-- <a href='users/<%%= tweetUserShow %>'><%%= tweetUser %></a>"+
+                              "\n-- <%%= tweetCreatedAt %>" +
+                              "<%% if (tweetMentions.length > 0){ %> <ul>" +
+                              "<%% tweetMentions.forEach(function(mentionedUser){ %>" +
+                              "<li><a href='users/<%%= mentionedUser.user_id %>'>" +
+                              "<%%= mentionedUser.user.username %></a></li>" +
+                              "<%% }) }%>" +
+                              "</ul></li>");
 
     $ul.prepend(template({
       tweetContent: data.content,
-      tweetUserShow: 'users/'+ data.user_id,
+      tweetUserShow: data.user_id,
       tweetUser: data.user.username,
-      tweetCreatedAt: data.created_at
+      tweetCreatedAt: data.created_at,
+      tweetMentions: data.mentions
     }))
 
   }
