Add new and edit routes for posts

--- a/app/assets/templates/postsIndexItem.jst.ejs
+++ b/app/assets/templates/postsIndexItem.jst.ejs
@@ -1,5 +1,5 @@
 <li>
-  <a href="<%= "#/posts/" + post.id %>">
+  <a href="#<%= "/posts/" + post.id %>">
     <%= post.escape('title') %>
   </a>
   <button class="delete">Delete Post</button>
