--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -2,6 +2,11 @@
 <h2>Sucka</h2>
 <h3>Sucka</h3>
 <h4>Sucka</h4>
-<main class="container">
 
-</main>
+<section class='sidebar'>
+
+</section>
+
+<section class='content'>
+
+</section>
