--- a/app/assets/templates/postShow.jst.ejs
+++ b/app/assets/templates/postShow.jst.ejs
@@ -1,3 +1,3 @@
-<h1><%= post.escape('title') %></h1>
-<p><%= post.escape('body') %></p>
-<button class="edit-post">Edit Post</button>
+<h1 data-column="title"><%= post.escape('title') %></h1>
+<p data-column="body"><%= post.escape('body') %></p>
+<!-- <button class="edit-post">Edit Post</button> -->
