Add make new rss feed form, page rendering properly.

--- a/skeleton/app/assets/templates/newFeedForm.jst.ejs
+++ b/skeleton/app/assets/templates/newFeedForm.jst.ejs
@@ -1,1 +1,7 @@
-label
+<label for="feed-title">Title</label>
+<input type="text" name="feed[title]" id="feed-title"><br>
+
+<label for="feed-url">URL</label>
+<input type="text" name="feed[url]" id="feed-url"><br>
+
+<input type="submit" value="Submit">
